DuPont DevSB/src/objects/CRM_IT_Project__c.object
<CustomObject>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>A effort rating of the degree of complexity of a project.</description>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Corrective Enhancement</fullName>
                </value>
                <value>
                    <fullName>CRM Content</fullName>
                </value>
                <value>
                    <fullName>Data Quality</fullName>
                </value>
                <value>
                    <fullName>Deploy New SFDC Program</fullName>
                </value>
                <value>
                    <fullName>Improve Business Process</fullName>
                </value>
                <value>
                    <fullName>Introduce New SFDC Functionality</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Usability Improvement</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project to which this project is related.</description>
        <inlineHelpText>Identify the project to which this project is related.</inlineHelpText>
        <label>Related Project</label>
        <referenceTo>CRM_IT_Project__c</referenceTo>
        <relationshipLabel>Related Projects</relationshipLabel>
        <relationshipName>Related_CRM_IT_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Instance__c</fullName>
        <description>The instance of SFDC for which the project will be implemented.</description>
        <inlineHelpText>The instance of SFDC for which the project will be implemented.</inlineHelpText>
        <label>SFDC Instance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-DuPont</fullName>
                    <default>true</default>
                    <label>One-DuPont</label>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_Amount__c</fullName>
        <label>SOW Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SOW_Name__c</fullName>
        <label>SOW Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <description>Sandbox in use for Configuration or Testing of this Project</description>
        <inlineHelpText>Sandbox in use for Configuration or Testing of this Project</inlineHelpText>
        <label>Sandbox</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SFDC_Instance__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dev1</fullName>
                </value>
                <value>
                    <fullName>Dev10</fullName>
                </value>
                <value>
                    <fullName>Dev2</fullName>
                </value>
                <value>
                    <fullName>Dev3</fullName>
                </value>
                <value>
                    <fullName>Dev4</fullName>
                </value>
                <value>
                    <fullName>Dev5</fullName>
                </value>
                <value>
                    <fullName>Dev7</fullName>
                </value>
                <value>
                    <fullName>Dev8</fullName>
                </value>
                <value>
                    <fullName>Dev9</fullName>
                </value>
                <value>
                    <fullName>DevCorp</fullName>
                </value>
                <value>
                    <fullName>DevDSS</fullName>
                </value>
                <value>
                    <fullName>DevGLS</fullName>
                </value>
                <value>
                    <fullName>DevPNR</fullName>
                </value>
                <value>
                    <fullName>DevSE</fullName>
                </value>
                <value>
                    <fullName>DevSSO</fullName>
                </value>
                <value>
                    <fullName>DTdev1</fullName>
                </value>
                <value>
                    <fullName>DTdev2</fullName>
                </value>
                <value>
                    <fullName>DTdev3</fullName>
                </value>
                <value>
                    <fullName>DTdev4</fullName>
                </value>
                <value>
                    <fullName>DTdev5</fullName>
                </value>
                <value>
                    <fullName>DTdev6</fullName>
                </value>
                <value>
                    <fullName>DTdev7</fullName>
                </value>
                <value>
                    <fullName>DTdev8</fullName>
                </value>
                <value>
                    <fullName>DTdev9</fullName>
                </value>
                <value>
                    <fullName>DTQA</fullName>
                </value>
                <value>
                    <fullName>DTtest2</fullName>
                </value>
                <value>
                    <fullName>DTtest3</fullName>
                </value>
                <value>
                    <fullName>DTtest4</fullName>
                </value>
                <value>
                    <fullName>DTtest5</fullName>
                </value>
                <value>
                    <fullName>DTtest6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of this project (or group of enhancements) in relation to release or deployment</description>
        <inlineHelpText>Charter(Discover/Evaluate)
Plan(Prepare/Initiate)
Design(Collaborate)
Configure(Clicks)
Develop(Code)
Construct(Build)
Validate(Test/Review)
USAT(UserAcceptance)
Deploy (Go-Live/Train/Communicate)
Control (Transfer to Support)
End (Complete)</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Configure</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Construct</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>USAT</fullName>
                </value>
                <value>
                    <fullName>Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DEIS_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Business Readiness</fullName>
                </value>
                <value>
                    <fullName>Charter Needed</fullName>
                </value>
                <value>
                    <fullName>Complexity</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Funding</fullName>
                </value>
                <value>
                    <fullName>No Issues</fullName>
                </value>
                <value>
                    <fullName>No Longer Required</fullName>
                </value>
                <value>
                    <fullName>On SFDC Roadmap</fullName>
                </value>
                <value>
                    <fullName>Resource Availability</fullName>
                </value>
                <value>
                    <fullName>Satisfactory Workaround</fullName>
                </value>
                <value>
                    <fullName>Scope Definition/Change</fullName>
                </value>
                <value>
                    <fullName>Scope Undefined</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this Project or Enhancement based on the status within the Demand Review process (matches Portfolio Status in central Project Server)</description>
        <inlineHelpText>Demand Review Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Idea/Forecast</fullName>
                </value>
                <value>
                    <fullName>BU/FN Approved</fullName>
                </value>
                <value>
                    <fullName>IT&amp;P Priortized</fullName>
                </value>
                <value>
                    <fullName>Pre-Planning</fullName>
                </value>
                <value>
                    <fullName>Pending Start</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Gap &amp; Reconciliation Needed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Rework/Re-evaluate/Further Action</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetedGoLiveDate__c</fullName>
        <description>Planned Implementation Date for this project</description>
        <inlineHelpText>Planned Implementation or Deployment Date</inlineHelpText>
        <label>Targeted Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TargetedQADeployDate__c</fullName>
        <description>Date Project is targeted for release to QA (Test) Sandbox Deployment</description>
        <inlineHelpText>Date Project is targeted for release to QA (Test) Sandbox Deployment</inlineHelpText>
        <label>Targeted QA Deploy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Targeted_Functionality__c</fullName>
        <description>The targeted functionality to be enabled or enhanced by the deployment.</description>
        <label>Targeted Functionality</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Activity Management</fullName>
                </value>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Business/Region Admin support</fullName>
                </value>
                <value>
                    <fullName>Campaign Management</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Communication Templates</fullName>
                </value>
                <value>
                    <fullName>Competitive Intelligence</fullName>
                </value>
                <value>
                    <fullName>Complaint/Case Management</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Contact Management</fullName>
                </value>
                <value>
                    <fullName>Content Management</fullName>
                </value>
                <value>
                    <fullName>Contract Management</fullName>
                </value>
                <value>
                    <fullName>Credit Analysis</fullName>
                </value>
                <value>
                    <fullName>Credit Processing</fullName>
                </value>
                <value>
                    <fullName>Critical Updates</fullName>
                </value>
                <value>
                    <fullName>Customer Loyalty Survey</fullName>
                </value>
                <value>
                    <fullName>Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Data Integration</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Demand Opportunity (outlook, gap)</fullName>
                </value>
                <value>
                    <fullName>Desktop Integration</fullName>
                </value>
                <value>
                    <fullName>Document Management</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Training</fullName>
                </value>
                <value>
                    <fullName>Electronic Signature</fullName>
                </value>
                <value>
                    <fullName>Email Interfacing</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation__c</fullName>
        <label>Validation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Develop, execute test scripts</fullName>
                </value>
                <value>
                    <fullName>Execute business cases</fullName>
                </value>
                <value>
                    <fullName>Coordinate user testing</fullName>
                </value>
                <value>
                    <fullName>Verify configuration</fullName>
                </value>
                <value>
                    <fullName>Verify data and test results</fullName>
                </value>
                <value>
                    <fullName>Solicit user feedback</fullName>
                </value>
                <value>
                    <fullName>Revise, update, retest</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Infosys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CRM IT Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>End__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Project_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCAdminSupport787141</group>
            <group>SFDCCRMEngagementTeams</group>
            <group>SFDCDataModelOwners</group>
            <group>SFDCDuPontSystemAdministrators</group>
            <group>SFDCIssueManagers</group>
            <group>SFDCKeyUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRMITTechnicalReview_CRM_IT_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>CRM IT Technical Review</label>
        <queue>CRMITTechnicalReview</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SFDC_Administration_Compliance_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>SFDC_Instance__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>TargetedGoLiveDate__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Type__c</field>
            <operation>equals</operation>
            <value>Compliance,Identity and Access,Security</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>SFDC Administration Compliance Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCDuPontSystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SFDC_Enhancements_CRM_IT_Project</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>End__c</columns>
        <columns>CRM_IT_Project_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_IT_Project__c.SFDC_Enhancement</value>
        </filters>
        <label>SFDC Enhancements</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCCRMEngagementTeams</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM IT Projects</pluralLabel>
    <recordTypes>
        <fullName>CRMAdministration</fullName>
        <active>true</active>
        <description>Compliance and SFDC System Maintenance</description>
        <label>CRM Administration</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_Program</fullName>
        <active>true</active>
        <description>Business Organization CRM Strategy - Parent Project for CRM Support Issues &amp; SFARs</description>
        <label>CRM Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_Project</fullName>
        <active>true</active>
        <description>Large project: 160+ hours or $10,000+ and funded by business</description>
        <label>CRM Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC_Enhancement</fullName>
        <active>true</active>
        <description>Between 40 and 160 hours and less than $10,000</description>
        <label>SFDC Enhancement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Apex_Sharing_Access__c</fullName>
        <label>Apex Sharing Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>Make_Field_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND($RecordType.Name = &quot;SFDC Enhancement&quot;,IF(OR(ISPICKVAL(Vendor__c,&quot;Infosys&quot;),ISPICKVAL(Vendor__c,&quot;Doextra&quot;),ISPICKVAL(Vendor__c,&quot;Lynx9&quot;),ISPICKVAL(Vendor__c,&quot;Topi&quot;)),ISBLANK(Effort_Spent__c),false) || Effort_Spent__c  &lt; PRIORVALUE(Effort_Spent__c))</errorConditionFormula>
        <errorMessage>Populate &quot;Effort Spent&quot; field if vendor has value AND field &quot;Effort Spent&quot; should be equal to or larger than PRIORVALUE.</errorMessage>
    </validationRules>
</CustomObject>